--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <div class="btn-group">
   <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Large button
+    Link : 
   </button>
   <div class="dropdown-menu">
     ...
