--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Tugas Web Cloning</h1>
-    <p class="lead">tugas : klon 5 web</p>
+    <p class="lead">Tugas : Klon 5 Web</p>
   </div>
 </div>
 
 <div class="btn-group">
   <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Link : 
+    Drop down kelima limanya : 
   </button>
   <div class="dropdown-menu">
-    ...
+    <a>href="algramatron.github.io/Tugas-Web/album.html"
+    </a>
+    
   </div>
 </div>
 
