--- a/index.html
+++ b/index.html
@@ -29,16 +29,27 @@
 </div>
 
          <marquee behavior="center">
-   TUGAS WEB CLONING_____TUGAS WEB CLONING 5 WEB_____KELIMA LIMANYA ADA DI DROPDOWN_____</marquee>
+   TUGAS WEB CLONING_____TUGAS WEB CLONING 5 WEB_____KELIMA LIMANYA ADA DI DROPDOWN_____DROPDOWN IS RIGHT HERE BOI -----]_____</marquee>
          
 <div class="btn-group">
   <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Drop down kelima limanya : 
   </button>
   <div class="dropdown-menu">
-    1.<a href="algramatron.github.io/Tugas-Web/album.html">
+    1.<a href="algramatron.github.io/album.html">Click me
     </a>
-    2.
+
+    2.<a href="algramatron.github.io/idk.html">Click me
+    </a>
+	  
+    3.<a href="algramatron.github.io/album.html">Click me
+    </a>
+	  
+    4.<a href="algramatron.github.io/album.html">Click me
+    </a>
+	  
+    5.<a href="algramatron.github.io/album.html">Click me
+    </a>
     
   </div>
 </div>
