--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
     Drop down kelima limanya : 
   </button>
   <div class="dropdown-menu">
-    1.<a href="algramatron.github.io/album.html">Click me
+    1.<a href="album.html">Click me
     </a>
 
-    2.<a href="algramatron.github.io/idk.html">Click me
+    2.<a href="idk.html">Click me
     </a>
 	  
-    3.<a href="algramatron.github.io/album.html">Click me
+    3.<a href="album.html">Click me
     </a>
 	  
-    4.<a href="algramatron.github.io/album.html">Click me
+    4.<a href="album.html">Click me
     </a>
 	  
-    5.<a href="algramatron.github.io/album.html">Click me
+    5.<a href="album.html">Click me
     </a>
     
   </div>
