--- a/index.html
+++ b/index.html
@@ -36,20 +36,15 @@
     Drop down kelima limanya : 
   </button>
   <div class="dropdown-menu">
-    1.<a href="https://algramatron.github.io/album.html">Click me
-    </a>
+    1.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">Link1</a>
 
-    2.<a href="https://algramatron.github.io/idk.html">Click me
-    </a>
+    2.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/idk.html" role="button">Link2</a>
 	  
-    3.<a href="https://algramatron.github.io/album.html">Click me
-    </a>
+    3.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">Link3</a>
 	  
-    4.<a href="https://algramatron.github.io/album.html">Click me
-    </a>
+    4.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">Link4</a>
 	  
-    5.<a href="https://algramatron.github.io/album.html">Click me
-    </a>
+    5.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">Link5</a>
     
   </div>
 </div>
