--- a/index.html
+++ b/index.html
@@ -34,22 +34,28 @@
 </div>
 
          <marquee behavior="center">
-   TUGAS WEB CLONING_____TUGAS WEB CLONING 5 WEB_____KELIMA LIMANYA ADA DI DROPDOWN_____DROPDOWN IS RIGHT HERE BOI -----]_____</marquee>
-         
+   TUGAS WEB CLONING_____TUGAS WEB CLONING 5 WEB_____KELIMA LIMANYA ADA DI DROPDOWN_____DROPDOWN IS RIGHT THERE BOI -----]_____</marquee>
+	  
+           <marquee behavior="center">
+   TUGAS WEB CLONING_____TUGAS WEB CLONING 5 WEB_____KELIMA LIMANYA ADA DI DROPDOWN_____DROPDOWN IS RIGHT THERE BOI -----]_____</marquee>
+	  
+	  <marquee behavior="center">
+   TUGAS WEB CLONING_____TUGAS WEB CLONING 5 WEB_____KELIMA LIMANYA ADA DI DROPDOWN_____DROPDOWN IS RIGHT THERE BOI -----]_____</marquee>
+	  
 <div class="btn-group">
   <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Drop down kelima limanya : 
   </button>
   <div class="dropdown-menu">
-    1.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">Link1</a>
+    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">1. Link1</a>
 
-    2.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/idk.html" role="button">Link2</a>
+    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/idk.html" role="button">2. Link2</a>
 	  
-    3.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">Link3</a>
+    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">3. Link3</a>
 	  
-    4.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">Link4</a>
+    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">4. Link4</a>
 	  
-    5.<a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">Link5</a>
+    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">5. Link5</a>
     
   </div>
 </div>
