--- a/index.html
+++ b/index.html
@@ -47,18 +47,22 @@
     Drop down kelima limanya : 
   </button>
   <div class="dropdown-menu">
-    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">1. Link1</a>
+    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">1. Link1</a>
 
-    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/idk.html" role="button">2. Link2</a>
+    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/idk.html" role="button">2. Link2</a>
 	  
-    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">3. Link3</a>
+    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">3. Link3</a>
 	  
-    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">4. Link4</a>
+    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">4. Link4</a>
 	  
-    <a class="btn btn-primary" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">5. Link5</a>
+    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">5. Link5</a>
     
   </div>
 </div>
+	  
+	  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  About me btn-lg btn-block
+</button>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
