--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <title>Oha-Pagi.</title>
   </head>
   <body>
-    
+	  
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  About me
+</button>
+	  
 	  <div class="modal-body">
   <h5>Aku ki programmer</h5>
   <p>Aku ki <a href="#" role="button" class="btn btn-secondary popover-test" title="Sorry typo."seng bener ki pro gamer ( ͡° ͜ʖ ͡°)">programmer.</a></p>
@@ -51,7 +55,7 @@
 
     <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/idk.html" role="button">2. Link2</a>
 	  
-    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">3. Link3</a>
+    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/nani.html" role="button">3. Link3</a>
 	  
     <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">4. Link4</a>
 	  
@@ -60,9 +64,6 @@
   </div>
 </div>
 	  
-	  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  About me btn-lg btn-block
-</button>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
