--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 	  
     <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/nani.html" role="button">3. Link3</a>
 	  
-    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">4. Link4</a>
+    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/lhamboh.html" role="button">4. Link4</a>
 	  
-    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/album.html" role="button">5. Link5</a>
+    <a class="btn btn-primary btn-lg btn-block" href="https://algramatron.github.io/Tugas-Web/tahusilinder.html" role="button">5. Link5</a>
     
   </div>
 </div>
