--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
     
   </div>
 </div>
-	  
+	<div class="alert alert-primary" role="alert">
+  iAlgraz.
+		Seorang programmer, tapi bukan pro gamer.
+		14/2/2018 ~
+</div>  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
